<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/pref_title_general">
        <EditTextPreference
            android:defaultValue="@string/default_gallery_storage_path"
            android:key="@string/key_gallery_name"
            android:summary="@string/default_gallery_storage"
            android:title="@string/title_gallery_storage" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_upload_over_wifi"
            android:summary="@string/summary_upload_over_wifi"
            android:title="@string/title_auto_upload" />

        <ListPreference
            android:defaultValue="120"
            android:dialogTitle="@string/title_notifications_delay"
            android:entries="@array/pref_notifications_delay_entries"
            android:entryValues="@array/pref_notifications_delay_values"
            android:key="@string/key_notifications_delay"
            android:summary="@string/summary_notifications_delay"
            android:title="@string/title_notifications_delay" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_font">
        <ListPreference
            android:defaultValue="ar"
            android:dialogTitle="@string/pref_languages"
            android:entries="@array/languages_entries"
            android:entryValues="@array/languages_values"
            android:key="@string/key_languages"
            android:summary="@string/summary_languages"
            android:title="@string/pref_languages" />
        <ListPreference
            android:defaultValue="ekhdemni"
            android:dialogTitle="@string/title_fonts_type"
            android:entries="@array/fonts_entries"
            android:entryValues="@array/fonts_values"
            android:key="@string/key_font_type"
            android:summary="@string/summary_fonts_type"
            android:title="@string/pref_fonts_type" />
        <ListPreference
            android:defaultValue="16"
            android:dialogTitle="@string/title_fonts_size"
            android:entries="@array/font_sizes_entries"
            android:entryValues="@array/font_sizes_values"
            android:key="@string/key_font_size"
            android:summary="@string/summary_fonts_size"
            android:title="@string/pref_fonts_size" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_notifications_enable"
            android:title="@string/title_notification_enable" />

        <!--<RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="notifications_new_message"
            android:key="@string/key_notifications_new_message_ringtone"
            android:ringtoneType="notification"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />-->

        <ListPreference
            android:defaultValue="wrinkle"
            android:dialogTitle="@string/pref_title_ringtone"
            android:entries="@array/pref_ringtone_entries"
            android:entryValues="@array/pref_ringtone_values"
            android:key="@string/key_notifications_new_message_ringtone"
            android:summary="@string/summary_choose_ringtone"
            android:title="@string/pref_title_ringtone" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_vibrate"
            android:summary="@string/summary_vibrate"
            android:title="@string/title_vibrate" />
    </PreferenceCategory>



    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_faq" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>